tests/snapshots/help/apps__list.snap
---
source: tests/cli/snapshots.rs
---
List all apps

Usage: vendo apps list [OPTIONS]

Options:
      --state <state>   Filter by state (active, inactive)
      --type <type>     Filter by app type
      --role <role>     Filter by capability (source, destination) — derived from permissions
      --limit <n>       Number of results [default: 20]
      --offset <n>      Pagination offset [default: 0]
      --json            Output raw JSON
      --output <field>  Print a single field per row (e.g. id)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo apps list
  $ vendo apps list --role source
  $ vendo apps list --output id
