tests/snapshots/help/apps__pause.snap
---
source: tests/cli/snapshots.rs
---
Pause an app

Usage: vendo apps pause [OPTIONS] <appId>

Arguments:
  <appId>  

Options:
      --json            Output raw JSON
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo apps pause <appId>
  $ vendo apps pause <appId> --dry-run
